WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
245789
Fix !ENABLE(SERVICE_WORKER) build break after
254861@main
https://bugs.webkit.org/show_bug.cgi?id=245789
Summary
Fix !ENABLE(SERVICE_WORKER) build break after 254861@main
Jigen Zhou
Reported
2022-09-28 09:43:12 PDT
The following compiling error occurs for PlayStation build after
254861@main
Source/WebKit\Platform/IPC/DaemonCoders.cpp:53:1: error: member access into incomplete type 'const WebCore::PushSubscriptionData' IMPLEMENT_CODER(WebCore::PushSubscriptionData);
Attachments
Add attachment
proposed patch, testcase, etc.
Jigen Zhou
Comment 1
2022-09-28 15:28:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4806
EWS
Comment 2
2022-09-29 09:30:31 PDT
Committed
255000@main
(91710dedcd5d): <
https://commits.webkit.org/255000@main
> Reviewed commits have been landed. Closing PR #4806 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-09-29 09:31:36 PDT
<
rdar://problem/100566664
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug