Fix !ENABLE(SERVICE_WORKER) build break after 254861@main https://bugs.webkit.org/show_bug.cgi?id=245789

Unreviewed build fix.

Canonical link: https://commits.webkit.org/255000@main